# diverse-hits

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  setup.sh
.github/workflows/: test_dev.yml  test_main.yml
data/: global_settings.json  optimizer_default_args.json  search_spaces.json  search_spaces.yaml
data/scoring_functions/: guacamol_thresholds.json
divopt/: chem.py  memory.py  scoring.py  utils.py
divopt/evaluation/: process_results.py  selection.py  simgraph.py
envs/: divopt.yml  gflownet.yml
notebooks/: algorithm_speeds.ipynb  barplots.ipynb  chemical_space.ipynb  convert.ipynb  cross_coverage_inter.ipynb  hyperparameter_importance.ipynb  hyperparameter_table.ipynb  intdiv_sphereexclusion_comp.ipynb  optimization_curves.ipynb  property_distributions.ipynb  property_thresholds.ipynb  tables_all_metrics.ipynb  toc_graphic.ipynb  train_scoring_functions.ipynb
notebooks/briem_lessel_plots/: New Briem_and_Lessel_dataset.ipynb
notebooks/tables/: hyperparameter_table.tex  results_allmetrics_samples.tex  results_allmetrics_time.tex
notebooks/tables_oldlimits/: hyperparameter_table.tex  results_allmetrics_samples.tex  results_allmetrics_time.tex
optimizers/gflownet_recursion/: optimizer.py  pyproject.toml
scripts/: create_maxmin_library.py  create_nodf_runs.py  create_repeat_runs.py  create_virtual_screening_runs.py  define_search_space.py  periodically_process_results.py  prepare_reinvent_data.py  run_directory.py  run_single.py
test/: test_memory.py  test_optimizers.py  test_scoring_function.py  test_smiles.txt
(+114 files in other folders)
