[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "divopt"
description = "Testing generative machine learning models for diverse molecular optimization"
version = "0.1.0"
requires-python = ">= 3.9"

dependencies = [
    "scikit-learn==1.3.0",
    "numpy",               #==1.24.3",
    "pandas-stubs",
    "pandas",              # ==2.0.3",
    "scipy==1.11.1",       # needs to be pinned for guacamol
    "rdkit",               # ==2022.9.5",
    "matplotlib",
    "seaborn",
    "pytest",
    "networkx",
    "pyyaml",
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
]


[tool.ruff]
target-version = "py39"
line-length = 120
lint.select = ["E", "F", "Q", "I"]
include = ["*.py", "*.pyi", "**/pyproject.toml", "**/*.ipynb"]
exclude = ["optimizers/"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[tool.pylint]
disable = ["C0114", "C0115", "C0116", "E1136", "E1101"]
max-line-length = 120
